--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,8 @@
 {
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "socket.io": "^2.3.0"
+    "socket.io": "^4.0.1"
   }
 }
